--- a/Marraia.Postgres/Marraia.Postgres.csproj
+++ b/Marraia.Postgres/Marraia.Postgres.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="Npgsql" Version="5.0.5" />
   </ItemGroup>
