--- a/Marraia.Postgres/Marraia.Postgres.csproj
+++ b/Marraia.Postgres/Marraia.Postgres.csproj
@@ -5,9 +5,9 @@
     <Authors>Fernando Mendes</Authors>
     <Description>Biblioteca para auxiliar sua conexão com o Postgres em seus projetos, de forma fácil e simples!</Description>
     <PackageIcon>marraia.png</PackageIcon>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
-    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.1</AssemblyVersion>
+    <FileVersion>2.0.0.1-alpha</FileVersion>
+    <Version>2.0.1-alpha</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/marraia/marraia.Postgres</PackageProjectUrl>
   </PropertyGroup>
